# flexline.Text2SQLSaaS

./: .gitignore  hello.py  main.py  pyproject.toml
app/flexline/: client.py  schemas.py  utils.py
app/text2sql/: client.py
app/ui/: authentication.py  main_page.py  results.py  utils.py
tests/: test_client.py  test_flexline.py  test_query.sql  test_question.txt
